parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    THEN

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list SEMICOLON
Rule 2     stmt_list -> stmt_list SEMICOLON stmt
Rule 3     stmt_list -> stmt
Rule 4     stmt -> assignment
Rule 5     stmt -> read
Rule 6     stmt -> write
Rule 7     stmt -> declaration
Rule 8     stmt -> construct_while
Rule 9     stmt -> construct_repeat
Rule 10    stmt -> construct_if
Rule 11    stmt -> block
Rule 12    block -> BEGIN stmt_list END
Rule 13    construct_while -> WHILE LPAR l_expr RPAR DO block
Rule 14    construct_repeat -> REPEAT stmt_list UNTIL LPAR l_expr RPAR
Rule 15    construct_if -> IF LPAR l_expr RPAR stmt construct_else
Rule 16    construct_else -> <empty>
Rule 17    construct_else -> ELSE stmt
Rule 18    l_expr -> a_expr oprel a_expr
Rule 19    oprel -> LT
Rule 20    oprel -> GT
Rule 21    oprel -> LEQ
Rule 22    oprel -> GEQ
Rule 23    assignment -> ID arr_idx ASSIGN a_expr
Rule 24    assignment -> ID ASSIGN a_expr
Rule 25    declaration -> datatype ID arr_size
Rule 26    arr_size -> LBRACK a_expr RBRACK
Rule 27    arr_size -> <empty>
Rule 28    datatype -> DT_INT
Rule 29    datatype -> DT_FLOAT
Rule 30    a_expr -> a_expr a_op a_expr
Rule 31    a_expr -> varref
Rule 32    a_expr -> INTEGER
Rule 33    a_expr -> FLOAT
Rule 34    a_expr -> LPAR a_expr RPAR
Rule 35    a_expr -> SUB a_expr
Rule 36    a_expr -> LITERAL_STR
Rule 37    a_op -> ADD
Rule 38    a_op -> SUB
Rule 39    a_op -> MUL
Rule 40    a_op -> DIV
Rule 41    varref -> ID arr_idx
Rule 42    arr_idx -> LBRACK a_expr RBRACK
Rule 43    read -> READ varlist
Rule 44    write -> WRITE expr_list
Rule 45    varlist -> varlist COMMA varref
Rule 46    varlist -> varref
Rule 47    expr_list -> expr_list COMMA a_expr
Rule 48    expr_list -> a_expr

Terminals, with rules where they appear

ADD                  : 37
ASSIGN               : 23 24
BEGIN                : 12
COMMA                : 45 47
DIV                  : 40
DO                   : 13
DT_FLOAT             : 29
DT_INT               : 28
ELSE                 : 17
END                  : 12
FLOAT                : 33
GEQ                  : 22
GT                   : 20
ID                   : 23 24 25 41
IF                   : 15
INTEGER              : 32
LBRACK               : 26 42
LEQ                  : 21
LITERAL_STR          : 36
LPAR                 : 13 14 15 34
LT                   : 19
MUL                  : 39
RBRACK               : 26 42
READ                 : 43
REPEAT               : 14
RPAR                 : 13 14 15 34
SEMICOLON            : 1 2
SUB                  : 35 38
THEN                 : 
UNTIL                : 14
WHILE                : 13
WRITE                : 44
error                : 

Nonterminals, with rules where they appear

a_expr               : 18 18 23 24 26 30 30 34 35 42 47 48
a_op                 : 30
arr_idx              : 23 41
arr_size             : 25
assignment           : 4
block                : 11 13
construct_else       : 15
construct_if         : 10
construct_repeat     : 9
construct_while      : 8
datatype             : 25
declaration          : 7
expr_list            : 44 47
l_expr               : 13 14 15
oprel                : 18
program              : 0
read                 : 5
stmt                 : 2 3 15 17
stmt_list            : 1 2 12 14
varlist              : 43 45
varref               : 31 45 46
write                : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list SEMICOLON
    (2) stmt_list -> . stmt_list SEMICOLON stmt
    (3) stmt_list -> . stmt
    (4) stmt -> . assignment
    (5) stmt -> . read
    (6) stmt -> . write
    (7) stmt -> . declaration
    (8) stmt -> . construct_while
    (9) stmt -> . construct_repeat
    (10) stmt -> . construct_if
    (11) stmt -> . block
    (23) assignment -> . ID arr_idx ASSIGN a_expr
    (24) assignment -> . ID ASSIGN a_expr
    (43) read -> . READ varlist
    (44) write -> . WRITE expr_list
    (25) declaration -> . datatype ID arr_size
    (13) construct_while -> . WHILE LPAR l_expr RPAR DO block
    (14) construct_repeat -> . REPEAT stmt_list UNTIL LPAR l_expr RPAR
    (15) construct_if -> . IF LPAR l_expr RPAR stmt construct_else
    (12) block -> . BEGIN stmt_list END
    (28) datatype -> . DT_INT
    (29) datatype -> . DT_FLOAT

    ID              shift and go to state 12
    READ            shift and go to state 13
    WRITE           shift and go to state 14
    WHILE           shift and go to state 16
    REPEAT          shift and go to state 17
    IF              shift and go to state 18
    BEGIN           shift and go to state 19
    DT_INT          shift and go to state 20
    DT_FLOAT        shift and go to state 21

    program                        shift and go to state 1
    stmt_list                      shift and go to state 2
    stmt                           shift and go to state 3
    assignment                     shift and go to state 4
    read                           shift and go to state 5
    write                          shift and go to state 6
    declaration                    shift and go to state 7
    construct_while                shift and go to state 8
    construct_repeat               shift and go to state 9
    construct_if                   shift and go to state 10
    block                          shift and go to state 11
    datatype                       shift and go to state 15

state 1

    (0) S' -> program .



state 2

    (1) program -> stmt_list . SEMICOLON
    (2) stmt_list -> stmt_list . SEMICOLON stmt

    SEMICOLON       shift and go to state 22


state 3

    (3) stmt_list -> stmt .

    SEMICOLON       reduce using rule 3 (stmt_list -> stmt .)
    UNTIL           reduce using rule 3 (stmt_list -> stmt .)
    END             reduce using rule 3 (stmt_list -> stmt .)


state 4

    (4) stmt -> assignment .

    SEMICOLON       reduce using rule 4 (stmt -> assignment .)
    UNTIL           reduce using rule 4 (stmt -> assignment .)
    END             reduce using rule 4 (stmt -> assignment .)
    ELSE            reduce using rule 4 (stmt -> assignment .)


state 5

    (5) stmt -> read .

    SEMICOLON       reduce using rule 5 (stmt -> read .)
    UNTIL           reduce using rule 5 (stmt -> read .)
    END             reduce using rule 5 (stmt -> read .)
    ELSE            reduce using rule 5 (stmt -> read .)


state 6

    (6) stmt -> write .

    SEMICOLON       reduce using rule 6 (stmt -> write .)
    UNTIL           reduce using rule 6 (stmt -> write .)
    END             reduce using rule 6 (stmt -> write .)
    ELSE            reduce using rule 6 (stmt -> write .)


state 7

    (7) stmt -> declaration .

    SEMICOLON       reduce using rule 7 (stmt -> declaration .)
    UNTIL           reduce using rule 7 (stmt -> declaration .)
    END             reduce using rule 7 (stmt -> declaration .)
    ELSE            reduce using rule 7 (stmt -> declaration .)


state 8

    (8) stmt -> construct_while .

    SEMICOLON       reduce using rule 8 (stmt -> construct_while .)
    UNTIL           reduce using rule 8 (stmt -> construct_while .)
    END             reduce using rule 8 (stmt -> construct_while .)
    ELSE            reduce using rule 8 (stmt -> construct_while .)


state 9

    (9) stmt -> construct_repeat .

    SEMICOLON       reduce using rule 9 (stmt -> construct_repeat .)
    UNTIL           reduce using rule 9 (stmt -> construct_repeat .)
    END             reduce using rule 9 (stmt -> construct_repeat .)
    ELSE            reduce using rule 9 (stmt -> construct_repeat .)


state 10

    (10) stmt -> construct_if .

    SEMICOLON       reduce using rule 10 (stmt -> construct_if .)
    UNTIL           reduce using rule 10 (stmt -> construct_if .)
    END             reduce using rule 10 (stmt -> construct_if .)
    ELSE            reduce using rule 10 (stmt -> construct_if .)


state 11

    (11) stmt -> block .

    SEMICOLON       reduce using rule 11 (stmt -> block .)
    UNTIL           reduce using rule 11 (stmt -> block .)
    END             reduce using rule 11 (stmt -> block .)
    ELSE            reduce using rule 11 (stmt -> block .)


state 12

    (23) assignment -> ID . arr_idx ASSIGN a_expr
    (24) assignment -> ID . ASSIGN a_expr
    (42) arr_idx -> . LBRACK a_expr RBRACK

    ASSIGN          shift and go to state 24
    LBRACK          shift and go to state 25

    arr_idx                        shift and go to state 23

state 13

    (43) read -> READ . varlist
    (45) varlist -> . varlist COMMA varref
    (46) varlist -> . varref
    (41) varref -> . ID arr_idx

    ID              shift and go to state 28

    varlist                        shift and go to state 26
    varref                         shift and go to state 27

state 14

    (44) write -> WRITE . expr_list
    (47) expr_list -> . expr_list COMMA a_expr
    (48) expr_list -> . a_expr
    (30) a_expr -> . a_expr a_op a_expr
    (31) a_expr -> . varref
    (32) a_expr -> . INTEGER
    (33) a_expr -> . FLOAT
    (34) a_expr -> . LPAR a_expr RPAR
    (35) a_expr -> . SUB a_expr
    (36) a_expr -> . LITERAL_STR
    (41) varref -> . ID arr_idx

    INTEGER         shift and go to state 32
    FLOAT           shift and go to state 33
    LPAR            shift and go to state 34
    SUB             shift and go to state 35
    LITERAL_STR     shift and go to state 36
    ID              shift and go to state 28

    expr_list                      shift and go to state 29
    a_expr                         shift and go to state 30
    varref                         shift and go to state 31

state 15

    (25) declaration -> datatype . ID arr_size

    ID              shift and go to state 37


state 16

    (13) construct_while -> WHILE . LPAR l_expr RPAR DO block

    LPAR            shift and go to state 38


state 17

    (14) construct_repeat -> REPEAT . stmt_list UNTIL LPAR l_expr RPAR
    (2) stmt_list -> . stmt_list SEMICOLON stmt
    (3) stmt_list -> . stmt
    (4) stmt -> . assignment
    (5) stmt -> . read
    (6) stmt -> . write
    (7) stmt -> . declaration
    (8) stmt -> . construct_while
    (9) stmt -> . construct_repeat
    (10) stmt -> . construct_if
    (11) stmt -> . block
    (23) assignment -> . ID arr_idx ASSIGN a_expr
    (24) assignment -> . ID ASSIGN a_expr
    (43) read -> . READ varlist
    (44) write -> . WRITE expr_list
    (25) declaration -> . datatype ID arr_size
    (13) construct_while -> . WHILE LPAR l_expr RPAR DO block
    (14) construct_repeat -> . REPEAT stmt_list UNTIL LPAR l_expr RPAR
    (15) construct_if -> . IF LPAR l_expr RPAR stmt construct_else
    (12) block -> . BEGIN stmt_list END
    (28) datatype -> . DT_INT
    (29) datatype -> . DT_FLOAT

    ID              shift and go to state 12
    READ            shift and go to state 13
    WRITE           shift and go to state 14
    WHILE           shift and go to state 16
    REPEAT          shift and go to state 17
    IF              shift and go to state 18
    BEGIN           shift and go to state 19
    DT_INT          shift and go to state 20
    DT_FLOAT        shift and go to state 21

    stmt_list                      shift and go to state 39
    stmt                           shift and go to state 3
    assignment                     shift and go to state 4
    read                           shift and go to state 5
    write                          shift and go to state 6
    declaration                    shift and go to state 7
    construct_while                shift and go to state 8
    construct_repeat               shift and go to state 9
    construct_if                   shift and go to state 10
    block                          shift and go to state 11
    datatype                       shift and go to state 15

state 18

    (15) construct_if -> IF . LPAR l_expr RPAR stmt construct_else

    LPAR            shift and go to state 40


state 19

    (12) block -> BEGIN . stmt_list END
    (2) stmt_list -> . stmt_list SEMICOLON stmt
    (3) stmt_list -> . stmt
    (4) stmt -> . assignment
    (5) stmt -> . read
    (6) stmt -> . write
    (7) stmt -> . declaration
    (8) stmt -> . construct_while
    (9) stmt -> . construct_repeat
    (10) stmt -> . construct_if
    (11) stmt -> . block
    (23) assignment -> . ID arr_idx ASSIGN a_expr
    (24) assignment -> . ID ASSIGN a_expr
    (43) read -> . READ varlist
    (44) write -> . WRITE expr_list
    (25) declaration -> . datatype ID arr_size
    (13) construct_while -> . WHILE LPAR l_expr RPAR DO block
    (14) construct_repeat -> . REPEAT stmt_list UNTIL LPAR l_expr RPAR
    (15) construct_if -> . IF LPAR l_expr RPAR stmt construct_else
    (12) block -> . BEGIN stmt_list END
    (28) datatype -> . DT_INT
    (29) datatype -> . DT_FLOAT

    ID              shift and go to state 12
    READ            shift and go to state 13
    WRITE           shift and go to state 14
    WHILE           shift and go to state 16
    REPEAT          shift and go to state 17
    IF              shift and go to state 18
    BEGIN           shift and go to state 19
    DT_INT          shift and go to state 20
    DT_FLOAT        shift and go to state 21

    stmt_list                      shift and go to state 41
    stmt                           shift and go to state 3
    assignment                     shift and go to state 4
    read                           shift and go to state 5
    write                          shift and go to state 6
    declaration                    shift and go to state 7
    construct_while                shift and go to state 8
    construct_repeat               shift and go to state 9
    construct_if                   shift and go to state 10
    block                          shift and go to state 11
    datatype                       shift and go to state 15

state 20

    (28) datatype -> DT_INT .

    ID              reduce using rule 28 (datatype -> DT_INT .)


state 21

    (29) datatype -> DT_FLOAT .

    ID              reduce using rule 29 (datatype -> DT_FLOAT .)


state 22

    (1) program -> stmt_list SEMICOLON .
    (2) stmt_list -> stmt_list SEMICOLON . stmt
    (4) stmt -> . assignment
    (5) stmt -> . read
    (6) stmt -> . write
    (7) stmt -> . declaration
    (8) stmt -> . construct_while
    (9) stmt -> . construct_repeat
    (10) stmt -> . construct_if
    (11) stmt -> . block
    (23) assignment -> . ID arr_idx ASSIGN a_expr
    (24) assignment -> . ID ASSIGN a_expr
    (43) read -> . READ varlist
    (44) write -> . WRITE expr_list
    (25) declaration -> . datatype ID arr_size
    (13) construct_while -> . WHILE LPAR l_expr RPAR DO block
    (14) construct_repeat -> . REPEAT stmt_list UNTIL LPAR l_expr RPAR
    (15) construct_if -> . IF LPAR l_expr RPAR stmt construct_else
    (12) block -> . BEGIN stmt_list END
    (28) datatype -> . DT_INT
    (29) datatype -> . DT_FLOAT

    $end            reduce using rule 1 (program -> stmt_list SEMICOLON .)
    ID              shift and go to state 12
    READ            shift and go to state 13
    WRITE           shift and go to state 14
    WHILE           shift and go to state 16
    REPEAT          shift and go to state 17
    IF              shift and go to state 18
    BEGIN           shift and go to state 19
    DT_INT          shift and go to state 20
    DT_FLOAT        shift and go to state 21

    stmt                           shift and go to state 42
    assignment                     shift and go to state 4
    read                           shift and go to state 5
    write                          shift and go to state 6
    declaration                    shift and go to state 7
    construct_while                shift and go to state 8
    construct_repeat               shift and go to state 9
    construct_if                   shift and go to state 10
    block                          shift and go to state 11
    datatype                       shift and go to state 15

state 23

    (23) assignment -> ID arr_idx . ASSIGN a_expr

    ASSIGN          shift and go to state 43


state 24

    (24) assignment -> ID ASSIGN . a_expr
    (30) a_expr -> . a_expr a_op a_expr
    (31) a_expr -> . varref
    (32) a_expr -> . INTEGER
    (33) a_expr -> . FLOAT
    (34) a_expr -> . LPAR a_expr RPAR
    (35) a_expr -> . SUB a_expr
    (36) a_expr -> . LITERAL_STR
    (41) varref -> . ID arr_idx

    INTEGER         shift and go to state 32
    FLOAT           shift and go to state 33
    LPAR            shift and go to state 34
    SUB             shift and go to state 35
    LITERAL_STR     shift and go to state 36
    ID              shift and go to state 28

    a_expr                         shift and go to state 44
    varref                         shift and go to state 31

state 25

    (42) arr_idx -> LBRACK . a_expr RBRACK
    (30) a_expr -> . a_expr a_op a_expr
    (31) a_expr -> . varref
    (32) a_expr -> . INTEGER
    (33) a_expr -> . FLOAT
    (34) a_expr -> . LPAR a_expr RPAR
    (35) a_expr -> . SUB a_expr
    (36) a_expr -> . LITERAL_STR
    (41) varref -> . ID arr_idx

    INTEGER         shift and go to state 32
    FLOAT           shift and go to state 33
    LPAR            shift and go to state 34
    SUB             shift and go to state 35
    LITERAL_STR     shift and go to state 36
    ID              shift and go to state 28

    a_expr                         shift and go to state 45
    varref                         shift and go to state 31

state 26

    (43) read -> READ varlist .
    (45) varlist -> varlist . COMMA varref

    SEMICOLON       reduce using rule 43 (read -> READ varlist .)
    UNTIL           reduce using rule 43 (read -> READ varlist .)
    END             reduce using rule 43 (read -> READ varlist .)
    ELSE            reduce using rule 43 (read -> READ varlist .)
    COMMA           shift and go to state 46


state 27

    (46) varlist -> varref .

    COMMA           reduce using rule 46 (varlist -> varref .)
    SEMICOLON       reduce using rule 46 (varlist -> varref .)
    UNTIL           reduce using rule 46 (varlist -> varref .)
    END             reduce using rule 46 (varlist -> varref .)
    ELSE            reduce using rule 46 (varlist -> varref .)


state 28

    (41) varref -> ID . arr_idx
    (42) arr_idx -> . LBRACK a_expr RBRACK

    LBRACK          shift and go to state 25

    arr_idx                        shift and go to state 47

state 29

    (44) write -> WRITE expr_list .
    (47) expr_list -> expr_list . COMMA a_expr

    SEMICOLON       reduce using rule 44 (write -> WRITE expr_list .)
    UNTIL           reduce using rule 44 (write -> WRITE expr_list .)
    END             reduce using rule 44 (write -> WRITE expr_list .)
    ELSE            reduce using rule 44 (write -> WRITE expr_list .)
    COMMA           shift and go to state 48


state 30

    (48) expr_list -> a_expr .
    (30) a_expr -> a_expr . a_op a_expr
    (37) a_op -> . ADD
    (38) a_op -> . SUB
    (39) a_op -> . MUL
    (40) a_op -> . DIV

    COMMA           reduce using rule 48 (expr_list -> a_expr .)
    SEMICOLON       reduce using rule 48 (expr_list -> a_expr .)
    UNTIL           reduce using rule 48 (expr_list -> a_expr .)
    END             reduce using rule 48 (expr_list -> a_expr .)
    ELSE            reduce using rule 48 (expr_list -> a_expr .)
    ADD             shift and go to state 50
    SUB             shift and go to state 51
    MUL             shift and go to state 52
    DIV             shift and go to state 53

    a_op                           shift and go to state 49

state 31

    (31) a_expr -> varref .

    ADD             reduce using rule 31 (a_expr -> varref .)
    SUB             reduce using rule 31 (a_expr -> varref .)
    MUL             reduce using rule 31 (a_expr -> varref .)
    DIV             reduce using rule 31 (a_expr -> varref .)
    COMMA           reduce using rule 31 (a_expr -> varref .)
    SEMICOLON       reduce using rule 31 (a_expr -> varref .)
    UNTIL           reduce using rule 31 (a_expr -> varref .)
    END             reduce using rule 31 (a_expr -> varref .)
    ELSE            reduce using rule 31 (a_expr -> varref .)
    RBRACK          reduce using rule 31 (a_expr -> varref .)
    RPAR            reduce using rule 31 (a_expr -> varref .)
    LT              reduce using rule 31 (a_expr -> varref .)
    GT              reduce using rule 31 (a_expr -> varref .)
    LEQ             reduce using rule 31 (a_expr -> varref .)
    GEQ             reduce using rule 31 (a_expr -> varref .)


state 32

    (32) a_expr -> INTEGER .

    ADD             reduce using rule 32 (a_expr -> INTEGER .)
    SUB             reduce using rule 32 (a_expr -> INTEGER .)
    MUL             reduce using rule 32 (a_expr -> INTEGER .)
    DIV             reduce using rule 32 (a_expr -> INTEGER .)
    COMMA           reduce using rule 32 (a_expr -> INTEGER .)
    SEMICOLON       reduce using rule 32 (a_expr -> INTEGER .)
    UNTIL           reduce using rule 32 (a_expr -> INTEGER .)
    END             reduce using rule 32 (a_expr -> INTEGER .)
    ELSE            reduce using rule 32 (a_expr -> INTEGER .)
    RBRACK          reduce using rule 32 (a_expr -> INTEGER .)
    RPAR            reduce using rule 32 (a_expr -> INTEGER .)
    LT              reduce using rule 32 (a_expr -> INTEGER .)
    GT              reduce using rule 32 (a_expr -> INTEGER .)
    LEQ             reduce using rule 32 (a_expr -> INTEGER .)
    GEQ             reduce using rule 32 (a_expr -> INTEGER .)


state 33

    (33) a_expr -> FLOAT .

    ADD             reduce using rule 33 (a_expr -> FLOAT .)
    SUB             reduce using rule 33 (a_expr -> FLOAT .)
    MUL             reduce using rule 33 (a_expr -> FLOAT .)
    DIV             reduce using rule 33 (a_expr -> FLOAT .)
    COMMA           reduce using rule 33 (a_expr -> FLOAT .)
    SEMICOLON       reduce using rule 33 (a_expr -> FLOAT .)
    UNTIL           reduce using rule 33 (a_expr -> FLOAT .)
    END             reduce using rule 33 (a_expr -> FLOAT .)
    ELSE            reduce using rule 33 (a_expr -> FLOAT .)
    RBRACK          reduce using rule 33 (a_expr -> FLOAT .)
    RPAR            reduce using rule 33 (a_expr -> FLOAT .)
    LT              reduce using rule 33 (a_expr -> FLOAT .)
    GT              reduce using rule 33 (a_expr -> FLOAT .)
    LEQ             reduce using rule 33 (a_expr -> FLOAT .)
    GEQ             reduce using rule 33 (a_expr -> FLOAT .)


state 34

    (34) a_expr -> LPAR . a_expr RPAR
    (30) a_expr -> . a_expr a_op a_expr
    (31) a_expr -> . varref
    (32) a_expr -> . INTEGER
    (33) a_expr -> . FLOAT
    (34) a_expr -> . LPAR a_expr RPAR
    (35) a_expr -> . SUB a_expr
    (36) a_expr -> . LITERAL_STR
    (41) varref -> . ID arr_idx

    INTEGER         shift and go to state 32
    FLOAT           shift and go to state 33
    LPAR            shift and go to state 34
    SUB             shift and go to state 35
    LITERAL_STR     shift and go to state 36
    ID              shift and go to state 28

    a_expr                         shift and go to state 54
    varref                         shift and go to state 31

state 35

    (35) a_expr -> SUB . a_expr
    (30) a_expr -> . a_expr a_op a_expr
    (31) a_expr -> . varref
    (32) a_expr -> . INTEGER
    (33) a_expr -> . FLOAT
    (34) a_expr -> . LPAR a_expr RPAR
    (35) a_expr -> . SUB a_expr
    (36) a_expr -> . LITERAL_STR
    (41) varref -> . ID arr_idx

    INTEGER         shift and go to state 32
    FLOAT           shift and go to state 33
    LPAR            shift and go to state 34
    SUB             shift and go to state 35
    LITERAL_STR     shift and go to state 36
    ID              shift and go to state 28

    a_expr                         shift and go to state 55
    varref                         shift and go to state 31

state 36

    (36) a_expr -> LITERAL_STR .

    ADD             reduce using rule 36 (a_expr -> LITERAL_STR .)
    SUB             reduce using rule 36 (a_expr -> LITERAL_STR .)
    MUL             reduce using rule 36 (a_expr -> LITERAL_STR .)
    DIV             reduce using rule 36 (a_expr -> LITERAL_STR .)
    COMMA           reduce using rule 36 (a_expr -> LITERAL_STR .)
    SEMICOLON       reduce using rule 36 (a_expr -> LITERAL_STR .)
    UNTIL           reduce using rule 36 (a_expr -> LITERAL_STR .)
    END             reduce using rule 36 (a_expr -> LITERAL_STR .)
    ELSE            reduce using rule 36 (a_expr -> LITERAL_STR .)
    RBRACK          reduce using rule 36 (a_expr -> LITERAL_STR .)
    RPAR            reduce using rule 36 (a_expr -> LITERAL_STR .)
    LT              reduce using rule 36 (a_expr -> LITERAL_STR .)
    GT              reduce using rule 36 (a_expr -> LITERAL_STR .)
    LEQ             reduce using rule 36 (a_expr -> LITERAL_STR .)
    GEQ             reduce using rule 36 (a_expr -> LITERAL_STR .)


state 37

    (25) declaration -> datatype ID . arr_size
    (26) arr_size -> . LBRACK a_expr RBRACK
    (27) arr_size -> .

    LBRACK          shift and go to state 57
    SEMICOLON       reduce using rule 27 (arr_size -> .)
    UNTIL           reduce using rule 27 (arr_size -> .)
    END             reduce using rule 27 (arr_size -> .)
    ELSE            reduce using rule 27 (arr_size -> .)

    arr_size                       shift and go to state 56

state 38

    (13) construct_while -> WHILE LPAR . l_expr RPAR DO block
    (18) l_expr -> . a_expr oprel a_expr
    (30) a_expr -> . a_expr a_op a_expr
    (31) a_expr -> . varref
    (32) a_expr -> . INTEGER
    (33) a_expr -> . FLOAT
    (34) a_expr -> . LPAR a_expr RPAR
    (35) a_expr -> . SUB a_expr
    (36) a_expr -> . LITERAL_STR
    (41) varref -> . ID arr_idx

    INTEGER         shift and go to state 32
    FLOAT           shift and go to state 33
    LPAR            shift and go to state 34
    SUB             shift and go to state 35
    LITERAL_STR     shift and go to state 36
    ID              shift and go to state 28

    l_expr                         shift and go to state 58
    a_expr                         shift and go to state 59
    varref                         shift and go to state 31

state 39

    (14) construct_repeat -> REPEAT stmt_list . UNTIL LPAR l_expr RPAR
    (2) stmt_list -> stmt_list . SEMICOLON stmt

    UNTIL           shift and go to state 60
    SEMICOLON       shift and go to state 61


state 40

    (15) construct_if -> IF LPAR . l_expr RPAR stmt construct_else
    (18) l_expr -> . a_expr oprel a_expr
    (30) a_expr -> . a_expr a_op a_expr
    (31) a_expr -> . varref
    (32) a_expr -> . INTEGER
    (33) a_expr -> . FLOAT
    (34) a_expr -> . LPAR a_expr RPAR
    (35) a_expr -> . SUB a_expr
    (36) a_expr -> . LITERAL_STR
    (41) varref -> . ID arr_idx
